# schedule

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start.ps1  start.sh  tailwind.config.js
alembic/: env.py
alembic/versions/: 0182286b5117_created_user_model.py  1710f943df26_changed_event_field.py  31573573e36a_initial_migration.py  3aacaaa26c45_updated_user_model.py  5a87f140af4c_init.py  6a62417341a1_added_default_to_username_field_in_users.py  7830183d910a_initial_migration.py  7e90ab14d128_initial_migrstions.py  7fdd13be8cf2_initial_migration.py  9e048b102225_initial_commit.py  b09e99c70f66_initial_migrations.py  e9512708b2d7_init.py  ec0bd3e38712_added_is_hidden_field_to_event_model.py
src/: utils.py
src/project/: __init__.py  database.py  dependencies.py
src/project/models/: __init__.py  availability.py  booking.py  event.py  user.py
src/project/routers/: auth.py  availability.py  booking.py  event.py  host.py  main.py
src/project/static/css/: main.css
src/project/static/logos/: event_types.html
src/project/static/src/: input.css
src/project/static/vue/: base.js  booking.js  calendar.js  main.js
src/project/templates/: authenticated_index.html  availability.html  availability_detail.html  base.html  booking.html  create_event.html  event.html  index.html  index_new.html  login.html  register.html  retrieve_event.html  settings.html  update_event.html
src/project/templates/availability/: availability_detail.html  list_availability.html
src/project/templates/booking/: book_information.html  canceled.html  past.html  unconfirmed.html  upcoming.html
src/project/templates/components/: book_info_header.html  booking.html  booking_empty_state.html  bookings.html  create_availability.html  create_event.html  index_sidebar.html  test.html
src/project/templates/event/: create_event.html  event.html  update_event.html
src/project/templates/host/: booking_confirmation.html  booking_event.html
src/project/templates/layouts/: index_sidebar.html
src/project/utils/: additional_func_auth.py  enums.py
src/project/utils/errors/: error_messages.py  errors.py
