[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Agahan14 <Imamidinov.agahan06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
