[tool.poetry]
package-mode = false
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Agahan14 <Imamidinov.agahan06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
alembic = "^1.13.2"
authlib = "^1.3.2"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
